--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DriveIn"
         tools:targetApi="31">
         <activity
+            android:name=".ParkingHistory"
+            android:exported="false" />
+        <activity
+            android:name=".Parking"
+            android:exported="false" />
+        <activity
             android:name=".Loading_activity2"
             android:exported="false" />
         <activity
